<?xml version="1.0" encoding="utf-8"?>
<!--
    // Name                 Andrew Hunter
    // Student ID           S1512543
    // Programme of Study   Computing
    -->

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/holo_blue_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent"><!--Not useless, centers linear layout in page-->

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeTitle"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/homeName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeName"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/homeID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/homeID"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25sp" />
        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="20dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:text="@string/homeButton" />
    </LinearLayout>
</RelativeLayout>