<?xml version="1.0" encoding="utf-8"?>
<!--
    // Name                 Andrew Hunter
    // Student ID           S1512543
    // Programme of Study   Computing
    -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="180dp"
    android:background="@android:color/holo_blue_dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/start_date"/>

        <EditText
            android:id="@+id/startDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/end_date"/>
        <EditText
            android:id="@+id/endDate"
            android:layout_width="100dp"
            android:textSize="16sp"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/filter"
            android:background="@android:color/white"
            android:textColor="@android:color/holo_blue_dark"
            android:id="@+id/createFilterButton"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@android:color/white"
            android:id="@+id/cancelButton"
            android:text="@string/clear"/>
    </LinearLayout>
</LinearLayout>